--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <dd>24ECAP202</dd>
 
             <dt>Name</dt>
-            <dd>MAYUR DESHMUKH</dd>
+            <dd>SARVESH BIRAL</dd>
 
             <dt>SRN</dt>
             <dd>01fe23bcs049</dd>
