--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>🌐 Find Me Online</h2>
         <ul>
             <li><a href="https://github.com/your-github-username" target="_blank">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/feed/">LinkedIn</a></li>
+            <li><a href="www.linkedin.com/in/sarvesh-biral-5471a9294">LinkedIn</a></li>
         </ul>
 
         <h2>Portfolio Topic</h2>
